# Portfolio-summer-2023

C++ language and OOP. Discussion of the questions that are given at the interview. Poland Summer 2023/Homework_NoconFilip_With_CMakeFileLists.txt/: CMakeLists.txt
C++ language and OOP. Discussion of the questions that are given at the interview. Poland Summer 2023/Homework_NoconFilip_With_CMakeFileLists.txt/headers/: App.h  Factory.h  FileInfo.h  Report.h  ReportJson.h  ReportTxt.h
C++ language and OOP. Discussion of the questions that are given at the interview. Poland Summer 2023/Homework_NoconFilip_With_CMakeFileLists.txt/src/: App.cpp  Factory.cpp  FileCollector.cpp  ReportJson.cpp  ReportTxt.cpp  main.cpp
Data abstraction and problem solving. STL. Poland Summer 2023/: homework.txt
Fundamentals of networking Poland Summer 2023/TCPServerClient/: CMakeLists.txt  Readme.txt
Inter-Process Communication Poland Summer 2023/homework_inter/: CMakeLists.txt  Client.cpp  Server.cpp  readme.txt  test.txt
Modern and Effective C++ Poland Summer 2023/: main.cpp
Multithreading Poland Summer 2023/: Multithreading_homework.cpp
Qt Framework. Basic concepts. Poland Summer 2023/report_v2/: CMakeLists.txt  counter.cpp  counter.h  main.cpp
Qt Framework. Desktop _ mobile GUI via QML Poland Summer 2023/homework/: CMakeLists.txt  ImageFetcher.cpp  ImageFetcher.h  homework.qmlproject  main.cpp  qmlmodules
Qt Framework. Desktop _ mobile GUI via QML Poland Summer 2023/homework/content/: App.qml  Screen01.ui.qml
Qt Framework. Desktop _ mobile GUI via QML Poland Summer 2023/homework/imports/: CMakeLists.txt
Qt Framework. Desktop _ mobile GUI via QML Poland Summer 2023/homework/imports/homework/: CMakeLists.txt  qmldir
Qt Framework. Desktop _ mobile GUI via QML Poland Summer 2023/homework/imports/homework/designer/: plugin.metainfo
Qt Framework. Desktop _ mobile GUI via QML Poland Summer 2023/homework/src/: import_qml_plugins.h  main.qml
Writing unit tests Poland Summer 2023/: tests.cpp
(+7 files in other folders)
